--- a/herolo-weather/src/components/common/NaviLink/NaviLink.scss
+++ b/herolo-weather/src/components/common/NaviLink/NaviLink.scss
@@ -9,7 +9,8 @@
   font-family: 'Assistant';
   font-weight: bold;
   text-decoration: none;
-  color: black;
+  color: white;
+  text-shadow: 1px 1px 1px black;
   font-size: 20px;
 }
 
