--- a/herolo-weather/src/components/common/NaviLink/NaviLink.scss
+++ b/herolo-weather/src/components/common/NaviLink/NaviLink.scss
@@ -1,3 +1,5 @@
+@import '../../../style/consts';
+
 .NaviLink {
   display: flex;
   align-items: center;
@@ -6,7 +8,7 @@
   padding: 5px 8px;
   width: 70px;
   height: 100%;
-  font-family: 'Assistant';
+  font-family: $fontFamily;
   font-weight: bold;
   text-decoration: none;
   color: white;
@@ -18,5 +20,8 @@
   padding: 0;
   padding-right: 8px;
   padding-left: 8px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid;
+  @include themify($themes) {
+    border-color: themed('borderColor');
+  }
 }
