--- a/herolo-weather/src/components/common/Toggle/Toggle.scss
+++ b/herolo-weather/src/components/common/Toggle/Toggle.scss
@@ -1,3 +1,5 @@
+@import '../../../style/consts';
+
 .Toggle__Wrapper {
   display: flex;
   flex-flow: row;
@@ -15,5 +17,7 @@
 }
 
 .Toggle-track {
-  background-color: black !important;
+  @include themify($themes) {
+    background-color: themed('toggleTrackColor') !important;
+  }
 }
