--- a/herolo-weather/src/components/HomePage/CurrentWeather/CurrentWeather.scss
+++ b/herolo-weather/src/components/HomePage/CurrentWeather/CurrentWeather.scss
@@ -2,8 +2,9 @@
 
 .CurrentWeather__Wrapper {
   display: grid;
-  grid-template-rows: 30% 70%;
-  grid-template-columns: 20% 60% 20%;
+  margin-top: 5%;
+  grid-template-rows: 20% 75%;
+  grid-template-columns: 40% 40% 20%;
   height: 100%;
 }
 
@@ -11,7 +12,7 @@
   grid-row: 1;
   grid-column: 1;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 50% 40%;
   grid-template-rows: 50% 50%;
   justify-items: center;
   align-items: center;
@@ -23,13 +24,17 @@
   height: 8vh;
 }
 
+.CurrentWeather__Value > label {
+  grid-column: 2;
+  justify-self: left;
+  font-size: 20px;
+}
+
 .CurrentWeather__Value > label:nth-of-type(1) {
   grid-row: 1;
-  grid-column: 2;
 }
 .CurrentWeather__Value > label:nth-of-type(2) {
   grid-row: 2;
-  grid-column: 2;
 }
 
 .CurrentWeather__Text {
