--- a/herolo-weather/src/components/HomePage/DayWeather/DayWeather.scss
+++ b/herolo-weather/src/components/HomePage/DayWeather/DayWeather.scss
@@ -3,27 +3,28 @@
 .DayWeather__Wrapper {
   height: 80%;
   display: grid;
-  grid-template-rows: 50% 50%;
-  justify-content: center;
+  grid-template-rows: 30% 40% 30%;
   border: 1px solid;
   padding-left: 10px;
   padding-right: 10px;
   border-radius: 5px;
+  justify-items: center;
+  align-items: center;
   @include themify($themes) {
     border-color: themed('dayWeatherBorderColor');
   }
 }
 
 .DayWeather__Day {
-  align-self: center;
-  justify-self: center;
   font-weight: bold;
   font-size: 25px;
 }
 
+.DayWeather__Icon {
+  height: 5vh;
+}
+
 .DayWeather__Temps {
-  align-self: center;
-  justify-self: center;
   font-size: 17px;
 }
 
