--- a/herolo-weather/src/components/HomePage/CurrentWeather/CurrentWeather.scss
+++ b/herolo-weather/src/components/HomePage/CurrentWeather/CurrentWeather.scss
@@ -11,30 +11,13 @@
 .CurrentWeather__Value {
   grid-row: 1;
   grid-column: 1;
-  display: grid;
-  grid-template-columns: 50% 40%;
-  grid-template-rows: 50% 50%;
-  justify-items: center;
-  align-items: center;
 }
 
-.CurrentWeather__Value > img {
-  grid-row: 1/3;
-  grid-column: 1;
-  height: 8vh;
-}
-
-.CurrentWeather__Value > label {
-  grid-column: 2;
-  justify-self: left;
-  font-size: 20px;
-}
-
-.CurrentWeather__Value > label:nth-of-type(1) {
+.CurrentWeather__Favorite {
   grid-row: 1;
-}
-.CurrentWeather__Value > label:nth-of-type(2) {
-  grid-row: 2;
+  grid-column: 3;
+  justify-self: center;
+  align-self: center;
 }
 
 .CurrentWeather__Text {
@@ -42,6 +25,6 @@
   grid-column: 1/4;
   justify-self: center;
   align-self: center;
-  font-size: 50px;
+  font-size: 6vw;
   font-weight: 600;
 }
