unit toggle implemented

--- a/herolo-weather/src/components/AppRouter/AppRouter.scss
+++ b/herolo-weather/src/components/AppRouter/AppRouter.scss
@@ -5,3 +5,11 @@
   grid-template-rows: 10vh 90vh;
   font-family: $fontFamily;
 }
+
+.theme-dark {
+  background-color: $bodyBG-dark;
+}
+
+.theme-light {
+  background-color: $bodyBG-light;
+}
