--- a/herolo-weather/src/components/Header/Header.scss
+++ b/herolo-weather/src/components/Header/Header.scss
@@ -6,7 +6,7 @@
   position: sticky;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   display: grid;
-  grid-template-columns: 70% 15% 15%;
+  grid-template-columns: 60% 10% 15% 15%;
   @include themify($themes) {
     background: themed('headerBG');
   }
@@ -23,15 +23,22 @@
   text-shadow: 1px 1px 1px black;
 }
 
-.Header__Theme {
+.Header__Unit {
   grid-column: 2;
   display: flex;
   justify-self: center;
   align-items: center;
 }
 
-.Header__Navigation {
+.Header__Theme {
   grid-column: 3;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+}
+
+.Header__Navigation {
+  grid-column: 4;
   display: flex;
   justify-content: space-evenly;
 }
