--- a/herolo-weather/src/components/HOC/withLoading.scss
+++ b/herolo-weather/src/components/HOC/withLoading.scss
@@ -1,6 +1,7 @@
 @import '../../style/consts';
 
-.withFetchLoading__Spinner {
+.withLoading__Spinner {
+  justify-self: center;
   @include themify($themes) {
     color: themed('spinnerColor');
   }
