--- a/herolo-weather/src/components/FavoritesPage/FavoritesPage.scss
+++ b/herolo-weather/src/components/FavoritesPage/FavoritesPage.scss
@@ -4,9 +4,10 @@
   height: 80vh;
   width: 70vw;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(10vw, 1fr));
+  grid-template-columns: repeat(5, 1fr);
   grid-gap: 30px;
   align-items: flex-start;
   justify-self: center;
   justify-items: center;
+  overflow: scroll;
 }
